# swraster

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  create_icon.py  create_icon.sh  cull.h  documentation.md  draw.cpp  draw.h  fps.h  geometry.cpp  geometry.h  icon.icns  main.cpp  physics_pipeline.cpp  physics_pipeline.h  physics_setup.cpp  pixel.cpp  pixel.h  platform.cpp  platform.h  platform_mac.mm  pool_worker.cpp  raster  raster_worker.cpp  raster_worker.h  render_buffers.h  render_config.h  render_loop.cpp  render_loop.h  renderer_context.h  serve_web.py  shadow.cpp  texture.cpp  texture.h  thread_profiler.cpp  thread_profiler.h  threading.cpp  (+5 more)
assets/: Info.plist  win_icon.rc
raster.dSYM/Contents/: Info.plist
scripts/: make_ico.py  serve_web.py  zig-cc-win.sh
src/cpp/: clip.cpp  clip.h  cull.h  draw.cpp  draw.h  fps.h  geometry.cpp  geometry.h  joltc.cpp  joltc.h  keysort.h  main.cpp  physics_pipeline.cpp  physics_pipeline.h  physics_setup.h  pixel.cpp  pixel.h  platform.cpp  platform.h  platform_mac.mm  platform_win.cpp  pool_worker.cpp  pool_worker.h  raster_worker.cpp  raster_worker.h  render_buffers.h  render_config.h  render_loop.cpp  render_loop.h  renderer_context.h  scene.cpp  scene.h  shadow.cpp  shadow.h  (+8 more)
src/rust/: Cargo.toml  build.rs
src/rust/.cargo/: config.toml
src/rust/src/: clip.rs  cull.rs  draw.rs  fps.rs  geometry.rs  jolt.rs  linalg.rs  mac_blit.rs  main.rs  physics.rs  physics_setup.rs  pixel.rs  platform.rs  profiler.rs  render_buffers.rs  render_config.rs  render_loop.rs  scene.rs  shadow.rs  texture.rs  win_blit.rs
(+80 files in other folders)
